Wrote basic FavoritesView.

--- a/MagicBus/res/layout/stop_view.xml
+++ b/MagicBus/res/layout/stop_view.xml
@@ -10,6 +10,7 @@
 	<TextView android:id="@+id/android:empty"
 	   android:layout_width="fill_parent" 
 	   android:layout_height="fill_parent"
-	   android:text="@string/stop_view_no_route" />
+	   android:text="@string/stop_view_no_route"
+	   android:textSize="25dip" />
 	   
 </LinearLayout>
